--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="sketch.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Image Scroller</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="wrapper">
+    <div class="bottom">
+      <img id="image1" src="tren2.jpg" draggable="false"/>
+    </div>
+    <div class="middle middle1">
+      <img id="image2" src="tren0.jpg" draggable="false"/>
+    </div>
+    <div class="scroller scroller-middle">
+      <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100">
+        <polygon points="0 50 37 68 37 32 0 50" style="fill:#FFCCBC"/>
+        <polygon points="100 50 64 32 64 68 100 50" style="fill:#FFCCBC"/>
+      </svg>
+    </div>
+  </div>
 
-    <div id="page">
-      <div class="wrapper">
-        <div class="bottom">
-          <!-- Load the first image dynamically -->
-          <img id="image1" src="tren2.jpg" draggable="false"/>
-        </div>
-        <div class="middle middle1"> <!-- Updated class name for the first scroller -->
-          <!-- Load the second image dynamically -->
-          <img id="image2" src="tren0.jpg" draggable="false"/>
-        </div>
-        <div class="scroller scroller-middle scroller-middle1"> <!-- Updated class name for the first scroller -->
-          <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><polygon points="0 50 37 68 37 32 0 50" style="fill:#FFCCBC"/><polygon points="100 50 64 32 64 68 100 50" style="fill:#FFCCBC"/></svg>
-          </div>
-        </div>     
-      </div>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
 
