--- a/index.html
+++ b/index.html
@@ -7,20 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <div class="bottom">
-      <img id="image1" src="tren2.jpg" draggable="false"/>
-    </div>
-    <div class="middle middle1">
-      <img id="image2" src="tren0.jpg" draggable="false"/>
-    </div>
-    <div class="scroller scroller-middle">
-      <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100">
-        <polygon points="0 50 37 68 37 32 0 50" style="fill:#FFCCBC"/>
-        <polygon points="100 50 64 32 64 68 100 50" style="fill:#FFCCBC"/>
-      </svg>
-    </div>
+ <div class="wrapper">
+  <img id="centerImage" src="tren2.jpg" draggable="false" />
+  <div class="scroller scroller-middle">
+    <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100">
+      <polygon points="0 50 37 68 37 32 0 50" style="fill:#FFCCBC"/>
+      <polygon points="100 50 64 32 64 68 100 50" style="fill:#FFCCBC"/>
+    </svg>
   </div>
+</div>
 
   <script src="script.js"></script>
 </body>
