--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Image Scroller</title>
+  <title>Centered Responsive Image with Scroller</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div class="wrapper">
-  <img id="centerImage" src="tren2.jpg" draggable="false" />
-  <div class="scroller scroller-middle">
-    <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100">
-      <polygon points="0 50 37 68 37 32 0 50" style="fill:#FFCCBC"/>
-      <polygon points="100 50 64 32 64 68 100 50" style="fill:#FFCCBC"/>
-    </svg>
-  </div>
-</div>
+  <div class="wrapper">
+    <!-- Single centered image -->
+    <img id="centerImage" src="tren2.jpg" draggable="false" />
 
-  <script src="script.js"></script>
+    <!-- Scroller overlay -->
+    <div class="scroller scroller-middle">
+      <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100">
+        <polygon points="0 50 37 68 37 32 0 50" style="fill:#FFCCBC"/>
+        <polygon points="100 50 64 32 64 68 100 50" style="fill:#FFCCBC"/>
+      </svg>
+    </div>
+  </div>
+
+  <script src="sketch.js"></script>
 </body>
 </html>
+
 
