--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Centered Responsive Image with Scroller</title>
+  <title>Responsive Image Scroller</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrapper">
-    <!-- Single centered image -->
-    <img id="centerImage" src="tren2.jpg" draggable="false" />
-
-    <!-- Scroller overlay -->
+    <div class="bottom">
+      <img id="image1" src="tren2.jpg" draggable="false"/>
+    </div>
+    <div class="middle middle1">
+      <img id="image2" src="tren0.jpg" draggable="false"/>
+    </div>
     <div class="scroller scroller-middle">
       <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100">
         <polygon points="0 50 37 68 37 32 0 50" style="fill:#FFCCBC"/>
