--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
 </head>
 
 <body>
-
+  <main>
+    <!-- Main content can go here -->
+  </main>
 
   <script src="sketch.js"></script>
 
   <div id="page">
     <div class="wrapper">
       
+      <!-- Bottom layer: Load the first image dynamically -->
+      <div class="bottom">
+        <img id="image1" src="tren2.jpg" draggable="false"/>
+      </div>
 
+      <!-- Middle layer: Updated class name for the first scroller, load second image dynamically -->
+      <div class="middle middle1">
+        <img id="image2" src="tren0.jpg" draggable="false"/>
+      </div>
 
       <!-- Scroller: Updated class name for the first scroller -->
       <div class="scroller scroller-middle scroller-middle1">
