--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="style.css">
+  
+  <!-- p5.js library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
+</head>
+
 <body>
   <div id="page">
     <div class="wrapper">
+
       <!-- Bottom layer -->
       <div class="bottom">
         <img id="image1" src="tren2.jpg" draggable="false"/>
@@ -13,13 +25,16 @@
 
       <!-- Scroller -->
       <div class="scroller scroller-middle scroller-middle1">
-        <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100">
+        <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" 
+             width="100" height="100" viewBox="0 0 100 100">
           <polygon points="0 50 37 68 37 32 0 50" style="fill:#FFCCBC"/>
           <polygon points="100 50 64 32 64 68 100 50" style="fill:#FFCCBC"/>
         </svg>
       </div>
+
     </div>
   </div>
 
   <script src="sketch.js"></script>
 </body>
+</html>
