--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" type="text/css" href="style.css">
-  
-  <!-- p5.js library -->
+  <link rel="stylesheet" href="style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
 </head>
@@ -13,17 +11,17 @@
   <div id="page">
     <div class="wrapper">
 
-      <!-- Bottom layer -->
+      <!-- Bottom image -->
       <div class="bottom">
-        <img id="image1" src="tren2.jpg" draggable="false"/>
+        <img id="image1" src="tren2.jpg" draggable="false" />
       </div>
 
-      <!-- Middle layer -->
+      <!-- Overlay image -->
       <div class="middle middle1">
-        <img id="image2" src="tren0.jpg" draggable="false"/>
+        <img id="image2" src="tren0.jpg" draggable="false" />
       </div>
 
-      <!-- Scroller -->
+      <!-- Slider -->
       <div class="scroller scroller-middle scroller-middle1">
         <svg class="scroller__thumb" xmlns="http://www.w3.org/2000/svg" 
              width="100" height="100" viewBox="0 0 100 100">
